--- a/UD26-2/src/main/resources/application.properties
+++ b/UD26-2/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/cientificos
+spring.datasource.url=jdbc:mysql://containers-us-west-96.railway.app:7400/cientificos
 spring.datasource.username=root
-spring.datasource.password=0218
+spring.datasource.password=fJ2MDLqjgE7jckvmVouf
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port=8181
 #url docker: jdbc:mysql://localhost:3306/cientificos p: 0218
