--- a/UD26-2/src/main/resources/application.properties
+++ b/UD26-2/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://containers-us-west-96.railway.app:7400/cientificos
-spring.datasource.username=root
-spring.datasource.password=fJ2MDLqjgE7jckvmVouf
+spring.datasource.url=jdbc:mysql://${URL_BBDD}:${PORT}/${BBDD}
+spring.datasource.username=${USER}
+spring.datasource.password=${PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-server.port=8181
-#url docker: jdbc:mysql://localhost:3306/cientificos p: 0218
-#url railway containers-us-west-96.railway.app:7400/cientificos p: fJ2MDLqjgE7jckvmVouf
+server.port=${SERVER_PORT}
+
