--- a/UD26-2/src/main/resources/application.properties
+++ b/UD26-2/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://${URL_BBDD}:${PORT}/${BBDD}
+spring.datasource.url=jdbc:mysql://${URL_BBDD}:${BBDD_PORT}/${BBDD}
 spring.datasource.username=${USER}
 spring.datasource.password=${PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-server.port=${SERVER_PORT}
+server.port=${PORT}
 
