--- a/UD26-2/src/main/resources/application.properties
+++ b/UD26-2/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.datasource.username=${USER}
 spring.datasource.password=${PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port=${PORT}
+# mvn spring-boot:run
 
